# oreo-kernel

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_and_test.bat  vcpkg.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  dev-image.yml  release.yml
build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  oreo-kernel.sln  oreo-kernel.vcxproj  oreo-kernel.vcxproj.filters  test_boolean_stress.vcxproj  test_boolean_stress.vcxproj.filters  test_feature_tree.vcxproj  test_feature_tree.vcxproj.filters  test_foundation.vcxproj  test_foundation.vcxproj.filters  test_foundation_battle.vcxproj  test_foundation_battle.vcxproj.filters  test_foundation_battle2.vcxproj  test_foundation_battle2.vcxproj.filters  test_foundation_hardened.vcxproj  test_foundation_hardened.vcxproj.filters  test_foundation_production.vcxproj  test_foundation_production.vcxproj.filters  test_geometry.vcxproj  test_geometry.vcxproj.filters  test_mesh.vcxproj  test_mesh.vcxproj.filters  test_robustness.vcxproj  test_robustness.vcxproj.filters  test_serialize.vcxproj  test_serialize.vcxproj.filters  test_sketch_solver.vcxproj  test_sketch_solver.vcxproj.filters  test_smoke.vcxproj  test_smoke.vcxproj.filters  test_step_roundtrip.vcxproj  test_step_roundtrip.vcxproj.filters  (+2 more)
build_msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_msvc/Testing/Temporary/: CTestCostData.txt
build_msvc/oreo-kernel.dir/Debug/: objects.txt
ci/: build.sh  grep_gate.sh  lsan.supp  spdx_add.sh  spdx_check.sh  tsan.supp  ubsan.supp
cmake/: OreoKernelConfig.cmake.in
corpora/: README.md
corpora/fuzz_feature_tree_json/: 01_empty_tree.json  02_single_box.json  03_box_then_fillet.json  04_adversarial_truncated.json  05_adversarial_huge_count.json  06_adversarial_nan_radius.json
corpora/fuzz_step_import/: 01_minimal.step  02_truncated.step
docker/: Dockerfile
docs/: .gitignore  architecture.md  branching-merging.md  deployment.md  error-codes.md  feature-schema.md  identity-model.md  migration-v1-to-v2.md  part-studio-as-function.md  part-studio-model.md  process-model.md  server-safe-api.md
fuzzers/: fuzz_deserialize.cc  fuzz_feature_tree_json.cc  fuzz_step_import.cc
include/: oreo_kernel.h
sample/: CMakeLists.txt  sample.c
src/capi/: oreo_capi.cpp
src/core/: assertion.h  cancellation.h  config_loader.cpp  config_loader.h  diagnostic.cpp  diagnostic.h  diagnostic_scope.cpp  diagnostic_scope.h  feature_flags.cpp  feature_flags.h  kernel_context.cpp  kernel_context.h  localization.cpp  localization.h  logging_sink.h  memory_pool.h  metrics.h  occt_scope_guard.cpp  occt_scope_guard.h  occt_try.h  operation_result.h  oreo_error.cpp  oreo_error.h  oreo_init.cpp  oreo_init.h  oreo_tolerance.cpp  oreo_tolerance.h  profile.h  progress.h  resource_quotas.h  rng.h  schema.cpp  schema.h  shape_identity.h  shape_identity_v1.cpp  shape_identity_v1.h  tag_allocator.h  thread_safety.h  units.cpp  units.h  (+2 more)
src/feature/: config.cpp  config.h  feature.cpp  feature.h  feature_schema.cpp  feature_schema.h  feature_tree.cpp  feature_tree.h  merge.cpp  merge.h  param_json.cpp  param_json.h  part_studio.cpp  part_studio.h  workspace.cpp  workspace.h
src/geometry/: oreo_boolean.cpp  oreo_extrude.cpp  oreo_fillet_chamfer.cpp  oreo_geometry.h  oreo_manufacturing.cpp  oreo_mirror_pattern.cpp  oreo_primitives.cpp  oreo_revolve.cpp  oreo_shell_loft_sweep.cpp  oreo_surface.cpp
src/io/: oreo_iges.cpp  oreo_iges.h  oreo_mesh_io.cpp  oreo_mesh_io.h  oreo_serialize.cpp  oreo_serialize.h  oreo_step.cpp  oreo_step.h  shape_fix.cpp  shape_fix.h  temp_file.h
src/mesh/: oreo_mesh.cpp  oreo_mesh.h  oreo_mesh_export.cpp  oreo_mesh_export.h
src/naming/: element_map.cpp  element_map.h  indexed_name.h  map_shape_elements.cpp  map_shape_elements.h  mapped_name.h  named_shape.cpp  named_shape.h  shape_mapper.h  topo_shape_adapter.cpp  topo_shape_adapter.h
src/query/: oreo_query.cpp  oreo_query.h
src/sketch/: Constraints.cpp  Constraints.h  GCS.cpp  GCS.h  Geo.cpp  Geo.h  oreo_sketch.cpp  oreo_sketch.h  planegcs_config.h
tests/test_boolean/: test_boolean_stress.cpp
tests/test_capi_consumer/: test_capi_consumer.c
tests/test_determinism/: test_determinism.cpp
tests/test_feature/: test_audit_2026_04_19.cpp  test_branch_merge.cpp  test_feature_extended.cpp  test_feature_schema.cpp  test_feature_tree.cpp  test_part_studio_function.cpp
tests/test_foundation/: test_foundation.cpp  test_foundation_audit_fixes.cpp  test_foundation_battle.cpp  test_foundation_battle_part2.cpp  test_foundation_hardened.cpp  test_foundation_modules.cpp  test_foundation_new_features.cpp  test_foundation_obs.cpp  test_foundation_production.cpp  test_hardening_2026_04_18.cpp  test_naming_v2.cpp  test_shape_identity.cpp  test_tag_allocator_v2.cpp
tests/test_fuzz/: test_fuzz.cpp
tests/test_integration/: test_concurrency.cpp  test_ctx_apis.cpp  test_doc_identity.cpp  test_doc_identity_nolegacy.cpp  test_integration.cpp  test_replay_golden.cpp  test_step_identity.cpp  test_transaction_api.cpp
tests/test_io/: test_mesh_iges_io.cpp
tests/test_mesh/: glb_smoke_main.cpp  test_mesh.cpp  test_mesh_export.cpp
tests/test_naming/: test_naming_edge_cases.cpp  test_topo_naming.cpp
tests/test_perf/: bench_identity.cpp  test_perf.cpp
tests/test_robustness/: test_robustness.cpp
tests/test_serialize/: test_serialize.cpp  test_serialize_migration.cpp
tests/test_sketch/: test_construction_geometry.cpp  test_sketch_persistence.cpp  test_sketch_solver.cpp
tests/test_step/: test_step_roundtrip.cpp
tests/test_unit/: test_geometry.cpp  test_smoke.cpp
(+174 files in other folders)
